syntax = "proto3";

package user;
option go_package = "userpb";

message User {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string picture = 4;
}

message UserLoginRequest {
  User user = 1;
}

message UserLoginResponse {
  // Whether this is a new user or not.
  bool new = 1;
}

service UserService {
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
}
